--- a/nodejs/views/components_m/_layout.pug
+++ b/nodejs/views/components_m/_layout.pug
@@ -5,4 +5,4 @@ html
     include _header.pug
     block content 
     include _footer.pug
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/style_m.css')
