recceived dict val can be checked now.

--- a/nodejs/public/stylesheets/style_m.css
+++ b/nodejs/public/stylesheets/style_m.css
@@ -20,6 +20,13 @@ body {
     margin: 5px;
 }
 
+.input{
+    width: 40px;
+    text-align: center;
+    align-items: center;
+    background-color: lightyellow;
+}
+
 
 /* 個別のボタンidに対してスタイル設定 */
 #id3{
