--- a/nodejs/views/index.pug
+++ b/nodejs/views/index.pug
@@ -10,7 +10,7 @@ block content
 
     hr
 
-    h2 Click button!
+    h2 Click button to send message!
     h3 num = #{num}
 
     form(action="/" method="post")
@@ -19,7 +19,16 @@ block content
       input(type="submit" id="id2" name = "countdown" value="countdown" class="class1")
       br
       br
+      a dict : {
+      input(type="string" name="key" placeholder="key" class="input" value=key)
+      a  : 
+      input(type="string" name="val" placeholder="val" class="input" value=val)
+      a }
       input(type="submit" id="id3" name = "senddict" value="senddict" class="class1")
     br
+    a Received message ........... #{received_msg}
+    br
+    a Received message type ... #{msg_type}
+
 
     hr
