--- a/nodejs/views/components/_layout_m.pug
+++ b/nodejs/views/components/_layout_m.pug
@@ -5,4 +5,5 @@ html
     include _header.pug
     block content 
     include _footer.pug
+    link(rel='stylesheet', href='/stylesheets/style_default.css')
     link(rel='stylesheet', href='/stylesheets/style_m.css')
