--- a/nodejs/views/index_m.pug
+++ b/nodejs/views/index_m.pug
@@ -15,16 +15,16 @@ block content
 
     form(action="/" method="post")
 
-      input(type="submit" id="id1" name = "countup" value="countup" class="class1")
-      input(type="submit" id="id2" name = "countdown" value="countdown" class="class1")
+      input(type="submit" id="id1" name = "countup" value="countup" class="button")
+      input(type="submit" id="id2" name = "countdown" value="countdown" class="button")
       br
       br
       a dict : {
       input(type="string" name="key" placeholder="key" class="input" value=key)
-      a } : {
+      a  : 
       input(type="string" name="val" placeholder="val" class="input" value=val)
       a }
-      input(type="submit" id="id3" name = "senddict" value="senddict" class="class1")
+      input(type="submit" id="id3" name = "senddict" value="senddict" class="button")
     br
     a Received message ........... #{received_msg}
     br
