--- a/nodejs/views/components/_layout.pug
+++ b/nodejs/views/components/_layout.pug
@@ -4,4 +4,5 @@ html
     include _header.pug
     block content 
     include _footer.pug
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/style_default.css')
+    link(rel='stylesheet', href='/stylesheets/style_pc.css')
